--- a/presentation_report/thesis/biblio.bib
+++ b/presentation_report/thesis/biblio.bib
@@ -377,13 +377,15 @@ author = {Hartford, Jason and Lewis, Greg and Leyton-Brown, Kevin and Taddy, Mat
 title = {Deep IV: a flexible approach for counterfactual prediction},
 year = {2017},
 publisher = {JMLR.org},
-abstract = {Counterfactual prediction requires understanding causal relationships between so-called treatment and outcome variables. This paper provides a recipe for augmenting deep learning methods to accurately characterize such relationships in the presence of instrument variables (IVs)—sources of treatment randomization that are conditionally independent from the outcomes. Our IV specification resolves into two prediction tasks that can be solved with deep neural nets: a first-stage network for treatment prediction and a second-stage network whose loss function involves integration over the conditional treatment distribution. This Deep IV framework allows us to take advantage of off-the-shelf supervised learning techniques to estimate causal effects by adapting the loss function. Experiments show that it outperforms existing machine learning approaches.},
+abstract = {Counterfactual prediction requires understanding causal relationships between so-called treatment and outcome variables. This paper provides a recipe for augmenting deep learning methods to accurately characterize such relationships in the presence of instrument variables (IVs)-sources of treatment randomization that are conditionally independent from the outcomes. Our IV specification resolves into two prediction tasks that can be solved with deep neural nets: a first-stage network for treatment prediction and a second-stage network whose loss function involves integration over the conditional treatment distribution. This Deep IV framework allows us to take advantage of off-the-shelf supervised learning techniques to estimate causal effects by adapting the loss function. Experiments show that it outperforms existing machine learning approaches.},
 booktitle = {Proceedings of the 34th International Conference on Machine Learning - Volume 70},
-pages = {1414–1423},
+pages = {1414--1423},
 numpages = {10},
 location = {Sydney, NSW, Australia},
 series = {ICML'17}
 }
+
+
 
 @misc{frauen2023,
       title={Estimating individual treatment effects under unobserved confounding using binary instruments}, 
